<resources>
    <string name="app_name">Messenger</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Welcome!</string>
    <string name="login_back_message">Login back into your account</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="do_not_have_an_account">Do not have an account?</string>
    <string name="join_now">Join now</string>
    <string name="sign_up_header">We want to know you!</string>
    <string name="sign_up_description">Enter details about yourself</string>
    <string name="name_hint">Full name</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="email_hint">Email</string>
    <string name="register_button_text">Register</string>
    <string name="chats_toolbar_header">Messages</string>
    <string name="search_icon_title">Search icon</string>
    <string name="friends">friends</string>
    <string name="chats">chats</string>
    <string name="settings">settings</string>
    <string name="write_a_message_hint">Write a message</string>
    <string name="send_content_description">Send</string>
    <string name="main_photo">Main photo</string>
    <string name="add_friend_fab_text">Add friend</string>
    <string name="friends_toolbar_title">Friends</string>
    <string name="add_to_friends_button_text">Add to friends</string>
    <string name="add_friend_toolbar_title">Add friend</string>
    <string name="enter_username_hint">Enter username</string>
    <string name="request_sent">Friend request sent</string>
    <string name="your_friends">Your friends:</string>
    <string name="write_a_message_button_text">Message</string>
    <string name="add_to_friends_button">Add to friends button</string>
    <string name="settings_toolbar_title">Settings</string>
    <string name="set_color_for_my_messages_button_text">Set color for my messages</string>
    <string name="set_color_for_friends_messages_button_text">Set color for friend\'s messages</string>
    <string name="sign_out_button_text">Sign out</string>
    <string name="dialog_friends_quantity_text">%1$d friends</string>
    <string name="requests_quantity_text">You have %1$d requests</string>
    <string name="pick_a_color_title">Pick a color</string>
    <string name="select_button_hint">Select</string>
    <string name="cancel_button_hint">Cancel</string>
    <string name="grant_permission_toast_text">You have to grant storage permission to upload photo</string>
    <string name="active_now">Active now</string>
    <string name="offline">Offline</string>
    <string name="avatar_content_description">Avatar</string>
    <string name="bottom_navigation_item_description">Bottom navigation item</string>
    <string name="back_navigation_icon_description">Back</string>
</resources>