<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:fillViewport="true"
    tools:context=".signUp.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kufam_semi_bold"
            android:text="@string/sign_up_header"
            android:textColor="@color/dark_grey"
            android:textAlignment="center"
            android:textSize="@dimen/_30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kufam_medium"
            android:text="@string/sign_up_description"
            android:textColor="@color/grey"
            android:textSize="@dimen/_15sp"
            android:layout_marginBottom="@dimen/_15sp"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_45dp"
            app:strokeColor="@color/turquoise"
            app:strokeWidth="@dimen/_3dp"
            android:layout_marginBottom="@dimen/_15sp">

            <ImageView
                android:id="@+id/main_photo"
                android:layout_width="@dimen/_90dp"
                android:layout_height="@dimen/_90dp"
                android:src="@drawable/ic_photo"
                android:scaleType="center"
                android:contentDescription="@string/main_photo"/>

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/turquoise"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/_220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                app:startIconDrawable="@drawable/ic_name"
                app:startIconTint="@color/white"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_hint"
                    android:inputType="text"
                    android:background="@android:color/transparent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/_220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                app:startIconDrawable="@drawable/ic_person"
                app:startIconTint="@color/white"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_hint"
                    android:inputType="text"
                    android:background="@android:color/transparent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/_220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/white"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/_220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                app:startIconDrawable="@drawable/ic_password"
                app:startIconTint="@color/white"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repeat_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repeat_password_hint"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/_220dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20dp"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/white"
                android:textColorHint="@color/white"
                app:hintTextColor="@color/white"
                app:boxStrokeColor="@color/white">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:background="@android:color/transparent"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/register_button"
                android:layout_width="@dimen/_195dp"
                android:layout_height="@dimen/_48dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:background="@drawable/login_and_register_button_style"
                app:backgroundTint="@color/white"
                android:text="@string/register_button_text"
                android:textAllCaps="false"
                android:textSize="@dimen/_15sp"
                android:textColor="@color/dark_grey"
                android:fontFamily="@font/kufam_regular"
                android:layout_marginTop="@dimen/_35dp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>